--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "wandercamp-app",
+  "name": "green-outdoors-co",
   "version": "1.0.0",
-  "description": "A web app that delivers the weather for a user's location using OpenWeather API.",
-  "main": "index.js",
+  "description": "An affiliate marketing website for sustainable, eco-friendly outdoor products.",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"No tests yet\"",
+    "client": "webpack serve --mode development --open --hot",
+    "server": "node server/index.js",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
     "build": "webpack --mode production"
   },
   "keywords": [
-    "weather",
-    "location",
-    "travel",
-    "forecast",
-    "API"
+    "affiliate",
+    "outdoor",
+    "eco-friendly",
+    "sustainable",
+    "green",
+    "products"
   ],
-  "author": "",
+  "author": "Justin Shaffer",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "node-fetch": "^3.1.0"
+    "axios": "^0.26.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "webpack": "^5.64.4",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-dev-server": "^4.7.3"
   }
 }
