--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "client": "webpack serve --mode development --open --hot",
     "server": "node server/index.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "start": "webpack serve --mode development --open",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -31,6 +32,8 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
