--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
-    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^8.0.1",
     "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
